# tarefa09_sensores_02

./: CMakeLists.txt  README.md  datalogger_main.c
lib/: buzzer.c  buzzer.h  imu_driver.c  imu_driver.h  sd_manager.c  sd_manager.h  ui_manager.c  ui_manager.h
python/: matplot.py
python/logs/: log_29-07-2025_17-16-49.csv  log_29-07-2025_17-17-05.csv  log_29-07-2025_17-17-15.csv
